# nextui-docs

./: .gitignore  404.html  README.md  index.html  index.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build_publish.yml
customizing/: index.html
customizing/custom-boot-logo/: index.html
customizing/custom-categories/: index.html
customizing/emulator-icons/: index.html
customizing/game-artwork/: index.html
customizing/leds/: index.html
customizing/overlays/: index.html
customizing/power-leds-clock/: index.html
customizing/quick-menu-theme/: index.html
docs/: customizing.md  docs.md  index.html  pak-store.md  paks.md  usage.md
docs/customizing/: custom-boot-logo.md  custom-categories.md  game-artwork.md  leds.md  overlays.md  power-leds-clock.md  quick-menu-theme.md
docs/development/: build.md
docs/getting-started/: bios.md  cheats.md  controls.md  emulator-notes.md  emulators.md  index.md  installation.md  managing-saves.md  retroachievements.md  roms.md  updating.md
docs/paks/: community-favorites.md  file-transfer.md  making-paks.md  portmaster.md  troubleshooting.md
docs/reference/: controls.md  device-support.md  emulator-notes.md
docs/shaders/: index.md
docs/support/: faq.md  known-issues.md  troubleshooting.md
getting-started/: index.html
getting-started/bios/: index.html
getting-started/cheats/: index.html
getting-started/controls/: index.html
getting-started/emulator-notes/: index.html
pak-store/: index.html
paks/: index.html
search/: search_index.json
shaders/: index.html
usage/: index.html
(+24 files in other folders)
